...
                    if vm.storeItems.contains(where: { $0.downloading }) {
                        showDownloadingGuardAlert = true
                    } else {
                        router.pop()
                    }
                } label: {
                    Image(systemName: "chevron.left")
                        .foregroundStyle(.white)
                        .font(.system(size: 18))
                }
                .padding(.leading, 4)

                Image(systemName: "cart")
...
